Updating PUT paths.
